<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/value"
        android:title="@string/value" 
        android:icon="@drawable/ic_edit"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/edit"
        app:showAsAction="always"
        android:title="@string/edit"
        android:icon="@drawable/ic_settings"/>
    <item
        android:id="@+id/copy"
        app:showAsAction="always"
        android:title="@string/copy"
        android:icon="@drawable/ic_copy"/>
    <item
        android:id="@+id/delete"
        app:showAsAction="always"
        android:title="@string/delete"
        android:icon="@drawable/ic_cross"/>
</menu>