<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnBackground"
        tools:context=".fragments.pack.EditPackFragment">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:tabIndicatorFullWidth="false"
            app:tabTextAppearance="@style/TextAppearance.AppCompat.Small" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs">

        </androidx.viewpager2.widget.ViewPager2>

        <LinearLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/white"
            android:gravity="center"
            android:showDividers="middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/value"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_edit" />

            <ImageButton
                android:id="@+id/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/copy"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_copy" />

            <Space
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <ImageButton
                android:id="@+id/e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/settings"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_settings" />

            <ImageButton
                android:id="@+id/d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/delete"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_cross" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/add"
            android:src="@drawable/ic_add"
            app:elevation="0dp"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/bar"
            app:layout_constraintTop_toTopOf="@+id/bar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
